Use a custom font to fix FEN alignment
Thanks to @btnlq for the font work.

I've tried to limit the scope of the font to just the FEN hole as we
really don't want to mess with popular characters like space everywhere
as it would probably ruin monospace on a lot of fonts. I suspect longer
term we probably want to combine this chess font (Segoe UI Symbol) and
our Source Code Pro font into one monospace font for all of code.golf.

Updates #645

--- a/css/_font.css
+++ b/css/_font.css
@@ -20,6 +20,13 @@
                    U+1FA70-1FAFF; /* Symbols and Pictographs Extended-A    */
 }
 
+/* Ensure FEN has consistent aligned display. See #645 for details */
+@font-face {
+    font-family: chess;
+    src: url(../fonts/chess.woff2);
+    unicode-range: U+20, U+2654-265F; /* Space & Chess Pieces */
+}
+
 @font-face {
      font-family: 'Source Code Pro';
      src: url(../fonts/source-code-pro.woff2);
